# frost-planner

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
docs/source/: conf.py  index.rst
examples/: generate_instances.py  generate_random_instances.py  say_hi.py  simple_job_shop.py  solve_instance.py  visualize_instance.py
frost_planner/: utils.py
frost_planner/core/: base.py  metrics.py  schedule.py  validate.py
frost_planner/executor/: base_executor.py  dynamic_executor.py  static_executor.py
frost_planner/generator/: instance_generator.py
frost_planner/solver/: __init__.py  base_solver.py  dummy_solver.py  genetic_solver.py  stochastic_solver.py
frost_planner/visualization/: gantt.py  instance_dot_exporter.py
frost_sheet/: utils.py
frost_sheet/core/: base.py  metrics.py  schedule.py  validate.py
frost_sheet/executor/: base_executor.py  dynamic_executor.py  static_executor.py
frost_sheet/generator/: instance_generator.py
frost_sheet/solver/: __init__.py  base_solver.py  dummy_solver.py  genetic_solver.py  stochastic_solver.py
frost_sheet/visualization/: gantt.py  instance_dot_exporter.py
project_name/: greeter.py
resources/instances/easy/: instance_0.json  instance_1.json  instance_2.json  instance_3.json  instance_4.json
resources/instances/medium/: instance_0.json  instance_1.json  instance_2.json  instance_3.json  instance_4.json
scripts/: apply_cstyle.sh  check_typing.sh  gen_doc.sh
tests/: test_greeter.py
tests/core/: test_base.py  test_metrics.py  test_schedule.py  test_validate.py
tests/executor/: test_static_executor.py
tests/solver/: test_dummy_solver.py
