[tool.poetry]
name = "frost_sheet"
version = "0.2.1"
description = "A Python library for solving Flexible Job-Shop (FJS) scheduling problems."
authors = ["Sebastiano Gaiardelli <sebastiano.gaiardelli@univr.it>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.7"
pandas = "^2.3.2"
matplotlib = "^3.10.5"
pyqt6 = "^6.9.1"
argparse = "^1.4.0"
logging = "^0.4.9.6"
rich = "^13.0.0"


[tool.poetry.group.dev.dependencies]
radon = "^6.0.1"
lizard = "^1.17.13"
pre-commit = "^4.0.1"
mypy = "^1.13.0"
ruff = "^0.8.3"
tox = "^4.23.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autoapi = "^3.4.0"
furo = "^2024.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
